```
====

=== Sub Pages
The new standard way to implement Sub Pages aka Components is now
```java
public class MyForm extends AbstractComponent<MyForm> {
    public MyForm(UiElement rootElement) {
        super(rootElement);
    }

    @Override
    protected MyForm self() {
        return this;
    }
}
```
Instantiate components
```java
class MyPage extends Page {
    private MyForm form = createComponent(MyForm.class, find(By.tagName("form"));
}
```

=== Implicit Element checks

The standard way of implicit GuiElement checks is now
```java
class MyPage extends Page {
    @Check
    private UiElement uiElement = findById(42);
}
```

[CAUTION]
.Performing explicit page checks is forbidden!
====
```java
class MyPage extends Page {
    public MyPage(WebDriver webDriver) {
        super(webDriver);
        checkPage(); <1>
    }
}

MyPage page = pageFactory.create(MyPage.class);
page.checkPage(); <2>
```
<1> Calling `checkPage()` as `protected` member is forbidden
<2> Calling `checkPage()` as `public` member is forbidden
====

=== Element instantiation

The new standard way to instantiate GuiElements is now
```java
class MyPage extends Page {
    private UiElement uiElement = findById(42);
    private UiElement uiElement = find(By.xpath("//div[1]"));
}
```

[NOTE]
.Constructor instantiation of GuiElements is now `@deprecated`
====
```java
class MyPage extends Page {
    private GuiElement guiElement = new GuiElement(By.xpath("//div[1]"), driver);
}
```
====

For descendant elements
```java
class MyPage extends Page {
    private UiElement parent = findById(42);
    private UiElement sub = parent.find(By.xpath("//div[1]"));
}
```

[NOTE]
.`getSubElement` is now `@deprecated`
====
```java
class MyPage extends Page {
    private GuiElement parent = new GuiElement(By.id(42), driver);
    private GuiElement sub = parent.getSubElement(By.xpath("//div[1]"));
}
```
====

List elements
```java
UiElement anchors = find(By.tagName("a"));

anchors.numberOfElements().is(3); <1>