@@ -2,6 +2,7 @@ dependencies {
     compile 'commons-io:commons-io:2.6'
     compile 'org.apache.commons:commons-lang3:3.9'
     compile 'org.slf4j:slf4j-log4j12:1.8.0-beta2'
+    implementation 'org.apache.commons:commons-text:1.8'
     implementation 'org.javassist:javassist:3.20.0-GA'
     implementation 'net.lingala.zip4j:zip4j:1.3.2'
     implementation 'de.idyl:winzipaes:1.0.1'
