@@ -1,10 +1,13 @@
 package eu.tsystems.mms.tic.testframework.pageobjects.internal.asserts;
 
 import eu.tsystems.mms.tic.testframework.common.Testerra;
+import org.apache.commons.text.StringSubstitutor;
 
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 /**
  * An abstract property assertion without any test implementations.
@@ -53,6 +56,15 @@ public abstract class AbstractPropertyAssertion<T> implements PropertyAssertion<
         }
         Collections.reverse(subjects);
         return String.join(".", subjects);
+    }
+
+    public String formatCustomMessage(String message, String actual, String expected) {
+        Map<String, String> values = new HashMap<>();
+        values.put("expected", expected);
+        values.put("actual", actual);
+        values.put("subject", traceSubjectString());
+        StringSubstitutor sub = new StringSubstitutor(values, "${", "}");
+        return sub.replace(message);
     }
 
     public void failedRecursive() {
